tests/testcases/errors/BCE0017-2.boo
"""
BCE0017-2.boo(7,4): BCE0017: The best overload for the method 'BCE0017-2Module.foo(object)' is not compatible with the argument list '(void)'.
"""
def foo(i as object):
	pass

foo(print("bar"))

